--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
             text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
         }
 
-        /* ===== NAVIGATION ===== */
+        /* New Save*/
         nav {
-            background-color: #FFB2C5;
+            background-color: rgba(215, 86, 118, 0.9); /* 90% opacity */
             padding: 1.2rem 0;
             position: sticky;
             top: 0;
@@ -332,7 +332,7 @@
         <ul>
             <li><a href="#cookies">Our Cookies</a></li>
             <li><a href="#about">About Us</a></li>
-            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#reviews">Reviews</a></li>
         </ul>
     </nav>
 
@@ -386,7 +386,7 @@
 
     <!-- ===== TESTIMONIALS ===== -->
     <section id="testimonials">
-        <h2 class="section-title">What Our Customers Say</h2>
+        <h2 class="section-title">Customer Reviews</h2>
         <div class="testimonials">
             <div class="testimonial">
                 <div class="rating">
