--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
         </div>
         <p>&copy; 2025 BakedwithLauv. All rights reserved.</p>
         <p style="margin-top: 1rem;">
-            <i class="fas fa-envelope"></i> bakedwithlauv@gmail.com | 
+            <i class="fas fa-envelope"></i> lauviahdenisse@gmail.com | 
             <i class="fas fa-phone"></i> 09774559860
         </p>
     </footer>
