--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             <p class="tagline">Love at First Bite</p>
             <div class="header-buttons">
                 <button class="btn-3d pulse">Shop Now</button>
-                <button class="btn-3d pulse" style="background-color: #FF8FAB; margin-left: 1rem;">Our Story</button>
+                <button class="btn-3d pulse" style="background-color: #FF8FAB; margin-left: 1rem;">My Story</button>
             </div>
         </div>
     </header>
@@ -374,8 +374,9 @@
         <h2 class="section-title">Our Story</h2>
         <div style="max-width: 800px; margin: 0 auto; padding: 0 2rem;">
             <p style="margin-bottom: 1.5rem;">
-                BakedwithLauv started as a small home bakery with a passion for creating delicious, 
-                high-quality cookies that bring joy to every bite.
+                BakedwithLauv started as my little escape, 
+                a way to relax and bake cookies that bring sweetness and joy, 
+                and a smile every time someone takes a bite.
             </p>
             <p>
                 We use only the finest ingredients, sourced locally whenever possible, and every 
