--- a/checkout.html
+++ b/checkout.html
@@ -259,7 +259,7 @@
                     <!-- FormSubmit configuration -->
                     <input type="hidden" name="_subject" value="New Order from BakedwithLauv">
                     <input type="hidden" name="_template" value="table">
-                    <input type="hidden" name="_next" value="thank-you.html">
+                    <input type="hidden" name="_next" value="https://yam-ghub.github.io/BakedwLauv2/thank-you.html">
                     <input type="hidden" name="_captcha" value="false">
                     
                     <div class="form-row">
