--- a/checkout.html
+++ b/checkout.html
@@ -255,7 +255,7 @@
         <div class="checkout-container">
             <div class="checkout-form">
                 <h2>Delivery Information</h2>
-                <form id="deliveryForm" action="https://formsubmit.co/regomija@mailgolem.com" method="POST">
+                <form id="deliveryForm" action="https://formsubmit.co/sleepdummy@gmail.com" method="POST">
                     <!-- FormSubmit configuration -->
                     <input type="hidden" name="_subject" value="New Order from BakedwithLauv">
                     <input type="hidden" name="_template" value="table">
