--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         <ul>
             <li><a href="#cookies">Our Cookies</a></li>
             <li><a href="#about">About Us</a></li>
-            <li><a href="#reviews">Reviews</a></li>
+            <li><a href="#testimonials">Reviews</a></li>
         </ul>
     </nav>
 
@@ -371,7 +371,7 @@
 
     <!-- ===== ABOUT SECTION ===== -->
     <section id="about">
-        <h2 class="section-title">Our Story</h2>
+        <h2 class="section-title">My Story</h2>
         <div style="max-width: 800px; margin: 0 auto; padding: 0 2rem;">
             <p style="margin-bottom: 1.5rem;">
                 BakedwithLauv started as my little escape, 
