--- a/checkout.html
+++ b/checkout.html
@@ -251,11 +251,10 @@
 <body>
     <div class="container">
         <h1>Checkout</h1>
-        
         <div class="checkout-container">
             <div class="checkout-form">
-                <h2>Delivery Information</h2>
-                <form id="deliveryForm" action="https://formsubmit.co/sleepdummy@gmail.com" method="POST">
+                <h2>Delivery Information</h2> // 
+                <form id="deliveryForm" action="https://formsubmit.co/8442d42d4be0f179557118e6352c3d77" method="POST"> 
                     <!-- FormSubmit configuration -->
                     <input type="hidden" name="_subject" value="New Order from BakedwithLauv">
                     <input type="hidden" name="_template" value="table">
