--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         <ul>
             <li><a href="#cookies">Our Cookies</a></li>
             <li><a href="#about">About Us</a></li>
-            <li><a href="#testimonials">Reviews</a></li>
+            <li><a href="#reviews">Reviews</a></li>
         </ul>
     </nav>
 
